initial attempts at keycloak image and example

--- a/Dockerfile-tomcat85-jre8
+++ b/Dockerfile-tomcat85-jre8
@@ -3,7 +3,7 @@ LABEL maintainer="tdudgeon@informaticsmatters.com"
 
 RUN apt-get update -y &&\
  apt-get upgrade -y &&\
- apt-get install -y --no-install-recommends openjdk-8-jre-headless curl &&\
+ apt-get install -y --no-install-recommends openjdk-8-jre-headless curl unzip &&\
  apt-get clean
 
 ENV TOMCAT_MAJOR 8
