--- a/Dockerfile-tomcat85-jre11-with-content
+++ b/Dockerfile-tomcat85-jre11-with-content
@@ -1,13 +1,13 @@
-FROM debian:buster
+FROM debian:bullseye
 LABEL maintainer="tdudgeon@informaticsmatters.com"
 
-RUN apt-get update -y &&\
+RUN apt-get update &&\
  apt-get upgrade -y &&\
  apt-get install -y --no-install-recommends openjdk-11-jre-headless curl &&\
  apt-get clean
 
 ENV TOMCAT_MAJOR 8
-ENV TOMCAT_VERSION 8.5.60
+ENV TOMCAT_VERSION 8.5.73
 ENV ARCHIVE apache-tomcat-$TOMCAT_VERSION.tar.gz
 ENV JAVA_HOME /usr/lib/jvm/java-11-openjdk-amd64
 
