--- a/Dockerfile-tomcat85-jre11-with-content
+++ b/Dockerfile-tomcat85-jre11-with-content
@@ -1,7 +1,7 @@
-FROM debian:bullseye
+FROM debian:buster
 LABEL maintainer="tdudgeon@informaticsmatters.com"
 
-RUN apt-get update &&\
+RUN apt-get --allow-releaseinfo-change update &&\
  apt-get upgrade -y &&\
  apt-get install -y --no-install-recommends openjdk-11-jre-headless curl &&\
  apt-get clean
